# latui

./: CONFIGURATION.md  CONTRIBUTING.md  Cargo.toml  PKGBUILD  README.md  WIKI_DEPLOYMENT_GUIDE.md  latui.desktop  prepare-release.sh  test-phase-1.1.sh  test-phase-1.2.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: main.yml
assets/themes/: dark.toml  light.toml
docs/: ARCHITECTURE.md  PHASE-1-COMPLETE.md  PHASE-1.1-QUICK-REF.md  PHASE-1.1-SUMMARY.md  PHASE-1.2-QUICK-REF.md  PHASE-1.2-SUMMARY.md  PHASE-2.2-SUMMARY.md  PHASE-4.1-QUICK-REF.md  PHASE-4.1-SUMMARY.md  PRODUCTION-READINESS-UPDATED.md  RUN-MODE-IMPLEMENTATION.md  architecture.md  binary_optimization_plan.md  clipboard-mode-implementation.md  customizability-plan.md  emojis-mode-implementation.md  files-mode-implementation.md  modes-implementation-docs.md  phase-1.1-implementation.md  phase-1.2-implementation.md  phase-2.2-implementation.md  phase-4.1-demo.sh  phase-4.1-implementation.md  production-readiness-review.md  production-readiness-summary.md  project.md  search-system-plan.md
src/: error.rs  lib.rs  main.rs
src/app/: controller.rs  mod.rs  state.rs
src/cache/: apps_cache.rs  mod.rs
src/config/: keywords.rs  keywords.toml  loader.rs  mod.rs  settings.rs  theme.rs
src/core/: action.rs  execution.rs  icons.rs  item.rs  mod.rs  mode.rs  registry.rs  searchable_item.rs  utils.rs
src/index/: mod.rs  trie.rs  trie_tests.rs
src/matcher/: fuzzy.rs
src/modes/: apps.rs  clipboard.rs  custom.rs  emojis.rs  files.rs  mod.rs  run.rs
src/search/: engine.rs  mod.rs  ranker.rs  scorer.rs  tokenizer.rs  tokenizer_tests.rs  typo.rs
src/tracking/: database.rs  frequency.rs  learning.rs  mod.rs
src/ui/: bundled_themes.rs  mod.rs  renderer.rs  style_resolver.rs  theme.rs
src/ui/components/: scrollbar.rs
tests/: edge_cases.rs  index_tests.rs  phase1_tests.rs  theming_tests.rs  tokenizer_tests.rs  tracking_tests.rs  typo_tests.rs
tests/scripts/: test-phase-2.2.sh  test-phase-4.1.sh
