[package]
name = "latui"
version = "0.1.0"
edition = "2024"

[dependencies]

ratatui = "0.30.0"
crossterm = "0.29.0"

nucleo-matcher = "0.3.1"

serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"

anyhow = "1.0.102"
thiserror = "2.0.18"

tokio = { version = "1.50.0", features = ["full"] }

walkdir = "2.5.0"

xdg = "3.0.0"

freedesktop-desktop-entry = "0.8.1"
