[package]
name = "latui"
version = "0.0.40"
authors = ["Krishneshvar <krishjn07@gmail.com>"]
edition = "2024"
description = "A TUI-based multi-purpose launcher"
repository = "https://github.com/Krishneshvar/latui"
license = "GPL-3.0-only"
keywords = ["launcher", "latui"]
categories = ["command-line-utilities"]

[dependencies]

ratatui = "0.30.0"
crossterm = "0.29.0"

nucleo-matcher = "0.3.1"

serde = { version = "1.0.228", features = ["derive"] }
toml = "1.0.6"

anyhow = "1.0.102"
thiserror = "2.0.18"

tokio = { version = "1.50.0", features = ["full"] }

walkdir = "2.5.0"

xdg = "3.0.0"

freedesktop-desktop-entry = "0.8.1"

serde_json = "1.0.149"

# Phase 1.2: Tokenization
unicode-segmentation = "1.12"

# Phase 2.3: Frequency & Recency Tracking
rusqlite = { version = "0.38.0", features = ["bundled"] }
lru = "0.16.3"
rustc-hash = "2.1.1"
